tests/integration/errors/intrinsic/main.cx
let bad = _unsafe_js
